fix de errores