@@ -1,24 +1,27 @@
 package com.smartlogix.auth.filter;
 
 import com.smartlogix.auth.repository.UserRepository;
-import com.smartlogix.auth.util.JwtUtil;
-import jakarta.servlet.*;
-import jakarta.servlet.http.*;
+import com.smartlogix.auth.security.JwtService;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections; // Usaremos esto en lugar de List.of para evitar errores de tipo
 
 @Component
 @RequiredArgsConstructor
 public class JwtFilter extends OncePerRequestFilter {
 
-    private final JwtUtil jwtUtil;
+    private final JwtService jwtService;
     private final UserRepository userRepository;
 
     @Override
@@ -34,17 +37,20 @@ public class JwtFilter extends OncePerRequestFilter {
 
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
             token = authHeader.substring(7);
-            username = jwtUtil.extractUsername(token);
+            // Si aquí sigue el error, revisa que en JwtService el método se llame extractUsername
+            username = jwtService.extractUsername(token); 
         }
 
         if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
 
             userRepository.findByUsername(username).ifPresent(user -> {
+                // Usamos Collections.singletonList para que sea más compatible con versiones viejas de Java
+                // REVISA: Si en User.java tu campo es 'role', cambia getUserRole() por getRole()
                 UsernamePasswordAuthenticationToken authToken =
                         new UsernamePasswordAuthenticationToken(
                                 user.getUsername(),
                                 null,
-                                List.of(() -> user.getRole())
+                                Collections.singletonList(new SimpleGrantedAuthority(user.getUserRole().name()))
                         );
 
                 authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
